--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -48,7 +48,7 @@
     "You can install the required libraries using `pip` as shown below:\n",
     "\n",
     "```bash\n",
-    "pip install pandas matplotlib scikit-learn shap\n",
+    "pip install pandas matplotlib seaborn scikit-learn shap\n",
     "```\n"
    ]
   },
